<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context="com.pechenegmobilecompanyltd.quizproject.ui.QuizFragment">

    <TextView
        android:id="@+id/text_question"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_text"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <TextView
        android:id="@+id/first_answer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/custom_ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/second_answer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_ripple_effect"
        android:clickable="true"
        android:layout_marginTop="30dp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/first_answer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/first_answer"
        app:layout_constraintTop_toBottomOf="@+id/first_answer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/button_next"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:background="@drawable/custom_ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/next"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_correct_answer"
        app:layout_constraintStart_toStartOf="@+id/text_correct_answer"
        app:layout_constraintTop_toBottomOf="@+id/third_answer"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/button_finish_quiz"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:background="@drawable/custom_ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/result"
        android:enabled="false"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_correct_answer"
        app:layout_constraintStart_toStartOf="@+id/text_correct_answer"
        app:layout_constraintTop_toBottomOf="@+id/third_answer"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/third_answer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/second_answer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/second_answer"
        app:layout_constraintTop_toBottomOf="@+id/second_answer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_count_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_font"
        android:text="@string/count_question"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/text_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/text_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_font"
        android:text="@string/difficult"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/text_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_count_question" />

    <TextView
        android:id="@+id/text_correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_font"
        android:gravity="center"
        android:text="@string/correct_answer"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintEnd_toEndOf="@+id/third_answer"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/third_answer"
        app:layout_constraintTop_toBottomOf="@+id/third_answer"
        app:layout_constraintVertical_bias="0.343" />

</androidx.constraintlayout.widget.ConstraintLayout>